--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <div class="row">
 
         <!-- Genres list -->
-        <div class="col s12 m4 l3 genres">
+        <div id="genresListContainer" class="col s12 m4 l3">
             <div th:replace="fragments/genres::genres"></div>
         </div>
 
