--- a/src/main/resources/templates/fragments/shows_modal.html
+++ b/src/main/resources/templates/fragments/shows_modal.html
@@ -26,8 +26,12 @@
                 <label for="newShowStartTime">Start time</label>
             </div>
             <div class="input-field">
-                <input id="newShowEndTime" name="endTime" type="text" class="picker--time"/>
-                <label for="newShowEndTime">End time</label>
+                <input id="newShowHoursDuration" name="hours" type="number" class="validate"/>
+                <label for="newShowHoursDuration">Hours</label>
+            </div>
+            <div class="input-field">
+                <input id="newShowMinutesDuration" name="minutes" type="number" class="validate"/>
+                <label for="newShowMinutesDuration">Minutes</label>
             </div>
             <div class="input-field">
                 <select id="newShowGenreSelect" name="genreName">
