closed meta tags

--- a/src/main/resources/templates/fragments/main_head.html
+++ b/src/main/resources/templates/fragments/main_head.html
@@ -1,8 +1,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="main_head">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
     <title>Title</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
