--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="/static/css/main.css"/>
 </head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
 <body>
 <div th:replace="fragments/header :: header"></div>
 <main class="container">
