added searching by show name and show genre

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,6 +8,16 @@
     <div class="nav-wrapper">
         <a href="#" class="brand_logo">Tv Program</a>
         <ul class="right">
+            <li>
+                <div class="input-field">
+                    <input placeholder="Search" id="searchQuery" name="query" type="text"/>
+                </div>
+            </li>
+            <li>
+                <a onclick="searchShows()" href="#!" id="searchBtn">
+                    <i class="material-icons">search</i>
+                </a>
+            </li>
             <li><a class="modal-trigger" href="#newChannel">New channel</a></li>
         </ul>
     </div>
