--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,6 +56,7 @@
     });
 </script>
 <script type="text/javascript" src="js/genres.js"></script>
+<script type="text/javascript" src="js/search.js"></script>
 <script type="text/javascript" src="js/shows.js"></script>
 <script type="text/javascript" src="js/channels.js"></script>
 </body>
